force-app/main/default/objects/Job_Application__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>