force-app/main/default/objects/Job_Application__c/fields/IsBookmarked__c.field-meta.xml
<CustomField>
    <fullName>IsBookmarked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bookmarked</label>
    <type>Checkbox</type>
</CustomField>