force-app/main/default/objects/Job_Application__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Total Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>